moved to chi router system

--- a/noted/templates/index.gohtml
+++ b/noted/templates/index.gohtml
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container">
-   <h1>Hello, world {{ .name }} from templates!</h1>
+   <h1>Hello, world {{ .name }} from templates!?</h1>
     <p>If you see this, then go:embed worked</p>
 </div>
 <div class="container">
