--- a/noted/templates/index.gohtml
+++ b/noted/templates/index.gohtml
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
     <script src="/static/js/htmx.min.js"></script>
-    <title>Template test</title>
+    <title>Noted</title>
 </head>
 <body>
 <div class="container">
-   <h1>Hello, world {{ .name }} from templates!?</h1>
+   <h1>Hello, world {{ .name }} from templates!!!</h1>
     <p>If you see this, then go:embed worked</p>
 </div>
 <div class="container">
