minor changes for testing

--- a/noted/templates/index.gohtml
+++ b/noted/templates/index.gohtml
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container">
-   <h1>Hello, world {{ .name }} from templates!!!</h1>
+   <h1>Hello, world {{ .name }} from templates!!</h1>
     <p>If you see this, then go:embed worked</p>
 </div>
 <div class="container">
@@ -22,6 +22,9 @@
         >
 
     <div id="search-results">Billy</div>
+</div>
+<div class="container">
+    <small>Copyright 2023, David Eidelman. Apache-2 License.</small>
 </div>
 <script src="/static/js/bootstrap.min.js" ></script>
 </body>
